Work in progress for JDK 1.1 and Tcl 8